# ChangeLog for dev-vcs/gitdb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Aug 2011; James Rowe <jnrowe@gmail.com> gitdb-0.5.4.ebuild:
  Keyworded amd64.

*gitdb-0.5.4 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +gitdb-0.5.4.ebuild:
  Version bump [420].

  13 Mar 2011; James Rowe <jnrowe@gmail.com> gitdb-0.5.2.ebuild:
  Keyworded x86.

  04 Mar 2011; James Rowe <jnrowe@gmail.com> gitdb-0.5.2.ebuild:
  Keyworded amd64.

  11 Feb 2011; James Rowe <jnrowe@gmail.com> gitdb-0.5.2.ebuild:
  Keyworded ~x86.

*gitdb-0.5.2 (02 Feb 2011)

  02 Feb 2011; James Rowe <jnrowe@gmail.com> +gitdb-0.5.2.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [270]. Required by git-python.
