@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST gitdb-0.5.2.tar.gz 171142 RMD160 8acf62d2777c7559e6dc4d6528e04e6ef0f0388d SHA1 31de657c7c4decf95877e15c7985e10cdaa75c62 SHA256 7105fa7611271ed490775a704e1c6d42b1c2886f422f707db136bad216c5bbac
 DIST gitdb-0.5.4.tar.gz 50258 RMD160 21961026cb560f85450c356464a7d1018000902a SHA1 2e01b48f53f1716e59291b4183449e7fe3e574ea SHA256 de5d2dac0daec4a9cd7bb1ae1cd42d53510dcf597397c608c12a154b69ad3783
-EBUILD gitdb-0.5.2.ebuild 514 RMD160 8995ebc4685a943df771e5a24cb6abe6fbde7d0c SHA1 b9f42779b365f8758b11d9003e99f6df315db302 SHA256 c3b4ed4ca2f1ed8b85ddc2c6c1965b17139b84944c0026584cdc9e95c31c5ead
-EBUILD gitdb-0.5.4.ebuild 515 RMD160 214ef761a23d62c18267ab80016fcb56c1014718 SHA1 0ebb375c7a3677bd024888b3ea0bf68122ad8249 SHA256 4b0dbaa6f69889595d7e0015fe7a493ea5a61b288071b8411e853617e23fa1a7
-MISC ChangeLog 743 RMD160 92abfd61ec131d68d507dd8b9ef8879e639b5de2 SHA1 a0d1b659ccc4870b627586bb3800453dee25eb27 SHA256 966a886a8d8e57eb1048babbae9dd5cbb24b6ccee1c0261777684fadf9b7039b
+EBUILD gitdb-0.5.4.ebuild 514 RMD160 8995ebc4685a943df771e5a24cb6abe6fbde7d0c SHA1 b9f42779b365f8758b11d9003e99f6df315db302 SHA256 c3b4ed4ca2f1ed8b85ddc2c6c1965b17139b84944c0026584cdc9e95c31c5ead
+MISC ChangeLog 849 RMD160 bf88aed72627aba40802799ddd97f2f413cb3f1a SHA1 5c530d6da418292c6d9bc99145a580fa1d2d1f4f SHA256 2eac12c3aa0d12bf75a9cd12b9af5ef9ef43a997ff35a48a7cb6f7caf45eb77b
 MISC metadata.xml 1256 RMD160 822a4bd10778b84139f7aa9bdde92e34befe1402 SHA1 858bcadb6853fcdd40f590647f4a89d0373cb030 SHA256 cbeae90b6872d8de65ef9c9b85af6a1e8c8ecb63ae121c85f25059cb91dc0077
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5ARAoACgkQzJrj3cAXR0kZSwCguOOMy8i9ROWVbvv3XAejMbqv
-F/gAn3juX12n7cEzR30fZUEMrgKnlkAs
-=bDG/
+iEYEAREKAAYFAk5AR6QACgkQzJrj3cAXR0misACfW/cbVVWQG1mqoW2PLiNZ2VY2
+D6oAn0nMyjJfdjo24PcZOxCL1y48caYv
+=cUMX
 -----END PGP SIGNATURE-----
