@@ -16,7 +16,7 @@ DESCRIPTION="GitDB is a pure-Python git object database"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
