@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 =dev-lang/python-2*
->=dev-python/async-0.5.2 >=app-admin/eselect-python-20091230 =dev-lang/python-2*
-0
-mirror://pypi/g/gitdb/gitdb-0.5.2.tar.gz
-
-http://pypi.python.org/pypi/gitdb/
-BSD
-GitDB is a pure-Python git object database
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-3
-
-compile install postinst postrm prepare
-
-
-
-
-
