@@ -6,7 +6,7 @@ mirror://pypi/g/gitdb/gitdb-0.5.4.tar.gz
 http://pypi.python.org/pypi/gitdb/
 BSD
 GitDB is a pure-Python git object database
-~amd64 ~x86
+amd64 x86
 distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
 
 
