@@ -1,4 +1,3 @@
-* dev-vcs/gitdb-0.5.4                         x86 SCHEDULED: <2011-08-08 Mon>
 * dev-python/html-1.16                        x86 SCHEDULED: <2011-08-08 Mon>
 * mail-client/notmuch-0.6                     x86 SCHEDULED: <2011-08-08 Mon>
 * media-gfx/nwdiag-0.2.7                      x86 SCHEDULED: <2011-08-08 Mon>
